--- a/public/quantity/.classpath
+++ b/public/quantity/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/FHDW/GOJA/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="C:/FHDW/GOJA/regExp20121014.jar"/>
 	<classpathentry kind="lib" path="C:/FHDW/GOJA/xmlrpc-1.2-b1ML.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
