--- a/public/metaModel/trunk/.project
+++ b/public/metaModel/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>metaModel</name>
+	<name>MetaModel</name>
 	<comment></comment>
 	<projects>
 	</projects>
