--- a/public/metaModel/trunk/.settings/org.eclipse.jdt.ui.prefs
+++ b/public/metaModel/trunk/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
+#Mon Oct 29 15:09:23 CET 2012
 eclipse.preferences.version=1
 editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
 sp_cleanup.add_default_serial_version_id=true
