CommandLineParser Args4J eingebaut
git-svn-id: file:///home/nik/repositories/svn/master@125 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/privat/niklas/PiAutomatonCreator/trunk/.classpath
+++ b/privat/niklas/PiAutomatonCreator/trunk/.classpath
@@ -10,5 +10,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/jgraphx.jar"/>
+	<classpathentry kind="lib" path="libs/args4j-2.0.21.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Nik/Downloads/args4j-2.0.21-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
