--- a/public/metaModel/trunk/.classpath
+++ b/public/metaModel/trunk/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="lib/regExp20121014.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-1.2-b1ML.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
