--- a/public/quantity/trunk/.classpath
+++ b/public/quantity/trunk/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="lib/regExp20121014.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-1.2-b1ML.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
