Testfälle größtenteils repariert Testzeugs verschoben Neue Suite mit allen Testfällen Eigenen UnitTestRunner für GOJA Test implementiert Annotation @InjectSingleton zum verwenden von Singletons.
git-svn-id: file:///home/nik/repositories/svn/master@352 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/metaModel/trunk/build.xml
+++ b/public/metaModel/trunk/build.xml
@@ -88,6 +88,9 @@
 
 
 	<target name="junit" depends="compileTest">
+		<delete dir="${reports.junit.dir}" failonerror="no">
+			<include name="*"/>
+		</delete>
 		<mkdir dir="${reports.junit.dir}"/>
 		<junit printsummary="yes" haltonfailure="no" includeantruntime="yes">
 			<formatter type="xml"/>
@@ -101,6 +104,7 @@
 			<batchtest todir="${reports.junit.dir}">
 				<fileset dir="${test.dir}">
 					<include name="**/*Test.java"/>
+					<exclude name="**/util/**"/>
 				</fileset>
 			</batchtest>
 		</junit>
